2005-08-10  Tim Waugh  <twaugh@redhat.com>

	* src/diff.c (best_name): Prevent use of uninitialised variable.

2005-07-22  Tim Waugh  <twaugh@redhat.com>

	* doc/patchutils.xml: Use referenceinfo for including author section.

2005-06-13  Tim Waugh  <twaugh@redhat.com>

	* configure.in: Version 0.2.31.

2005-05-11  Tim Waugh  <twaugh@redhat.com>

	* tests/delhunk6/run-test: New failing rediff test.
	* Makefile.am: Run it.

	* src/interdiff.c (construct_unline): Fixed compiler warning.

	* splitdiff.in: Applied Debian patch to prevent warnings from
	splitdiff (Debian bug #306869).

2005-03-21  Tim Waugh  <twaugh@redhat.com>

	* doc/patchutils.xml: Fixed missing space (debian bug #299310).
	Patch from Michael Fedrowitz.

2005-02-26  Tim Waugh  <twaugh@redhat.com>

	* src/diff.c (read_atatline): Require decimal for offsets.  Reported
	by Robert Collins <robertc@robertcollins.net>.

2004-11-29  Tim Waugh  <twaugh@redhat.com>

	* src/filterdiff.c (syntax), src/rediff.c (main): Applied patch from
	Juan M. Bello Rivas <jmbr@openwall.com> to use xstrdup instead of
	strdup.

	* src/rediff.c (main): Applied patch from Juan M. Bello
	Rivas <jmbr@openwall.com>.

2004-11-22  Tim Waugh  <twaugh@redhat.com>

	* splitdiff.in: Applied patch from Martin Schulze <joey@infodrom.org>
	to use %03d when generating output filenames (Debian bug #282017).

2004-07-15  Tim Waugh  <twaugh@redhat.com>

	* configure.in: Version 0.2.30 (stable).

2004-07-15  Tim Waugh  <twaugh@redhat.com>

	* src/filterdiff.c (display_filename): Better padding for file
	number.

2004-07-07  Tim Waugh  <twaugh@redhat.com>

	* src/diff.c (read_timezone): New function.
	(read_timestamp): Use it.  Suggested by Shawn Wagner, for parsing
	another common traditional date format.

2004-07-03  Tim Waugh  <twaugh@redhat.com>

	* src/filterdiff.c (syntax): Explain --number-files a bit more.

	* src/filterdiff.c (hunk_matches): Don't call file_matches()
	unnecessarily.

2004-07-02  Tim Waugh  <twaugh@redhat.com>
